# nyx

cpp/: CMakeLists.txt
cpp/resources/: resources.qrc
cpp/src/: NyxApp.cpp  NyxApp.h  main.cpp  main_test.cpp
cpp/src/core/: ConfigManager.cpp  ConfigManager.h  NotificationManager.cpp  NotificationManager.h  ServiceManager.cpp  ServiceManager.h
cpp/src/models/: ServiceConfig.cpp  ServiceConfig.h  ServiceInfo.cpp  ServiceInfo.h  ServiceStatus.h
cpp/src/ui/: MainWindow.cpp  MainWindow.h  ServiceTrayIcon.cpp  ServiceTrayIcon.h
cpp/src/ui/dialogs/: AddServiceDialog.cpp  AddServiceDialog.h  EditServiceDialog.cpp  EditServiceDialog.h  LogViewerDialog.cpp  LogViewerDialog.h  SettingsDialog.cpp  SettingsDialog.h
cpp/src/utils/: AutostartHelper.cpp  AutostartHelper.h  Constants.h  PolkitHelper.cpp  PolkitHelper.h
